Using commons Base64, added licensing, creates a jar with everything in it.